2004-01-18  Dave Malcolm  <david@davemalcolm.demon.co.uk>

	* Makefile.am, cong-editor-area-flow-holder-blocks.c, cong-editor-area-flow-holder-blocks.h, cong-editor-area-flow-holder-single.c, cong-editor-area-flow-holder-single.h, cong-editor-area-flow-holder.c, cong-editor-area-flow-holder.h, cong-editor-child-policy-flow-holder.c, cong-editor-child-policy-flow-holder.h, cong-editor-child-policy-inline.c, cong-editor-child-policy-inline.h, cong-editor-child-policy.c, cong-editor-child-policy.h

	Added new files; removed dead code

	* cong-editor-line-manager.h, cong-editor-line-manager.c, cong-editor-line-manager-simple.h, cong-editor-line-manager-simple.c, cong-editor-line-manager-span-wrapper.h, cong-editor-line-manager-span-wrapper.c

	New files

2004-01-16  Daniel van Eeden  <daniel_e@dds.nl>

	* cong-file-new.c, cong-primary-window.c & global.h

	There should be a "new document" button if no document is loaded.

2004-01-16  Dave Malcolm  <david@davemalcolm.demon.co.uk>

	* cong-editor-widget3.c

	Removed dead code

2004-01-15  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-app.c

	Suppress some debug logging

2004-01-15  Geert Stappers <stappers@stappers.nl>

	* plugin-templates.c

	Fixed C99ism build problem on gcc-2.95.4

2004-01-15  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-app.c

	Suppress a warning due to clashing PRIVATE macros
	
2004-01-14  Jeff Martin <jeff@custommonkey.org>

	* plugin-templates.c

	Change template code to use a <cong:template> element

2004-01-13  Daniel Larsson <Daniel.Larsson@servicefactory.se>

	* plugin-templates.c

	Free a GSList actual with a g_slist_free()

2004-01-11  David Malcolm <david@davemalcolm.demon.co.uk>
