@@ -44,8 +44,14 @@ struct CongEditorNodeCommentDetails
 	gulong handler_id_selection_change;
 };
 
+#if 1
+static void 
+create_areas (CongEditorNode *editor_node,
+	      const CongAreaCreationInfo *creation_info);
+#else
 static CongEditorArea*
 generate_block_area (CongEditorNode *editor_node);
+#endif
 
 /* Declarations of the CongDocument event handlers: */
 static void 
@@ -80,7 +86,11 @@ cong_editor_node_comment_class_init (CongEditorNodeCommentClass *klass)
 
 	CongEditorNodeClass *node_klass = CONG_EDITOR_NODE_CLASS(klass);
 
+#if 1
+	node_klass->create_areas = create_areas;
+#else
 	node_klass->generate_block_area = generate_block_area;
+#endif
 }
 
 static void
@@ -118,6 +128,14 @@ cong_editor_node_comment_new (CongEditorWidget3 *widget,
 				 );
 }
 
+#if 1
+static void 
+create_areas (CongEditorNode *editor_node,
+	      const CongAreaCreationInfo *creation_info)
+{
+	g_assert_not_reached (); /* FIXME */
+}
+#else
 static CongEditorArea*
 generate_block_area (CongEditorNode *editor_node)
 {
@@ -157,6 +175,7 @@ generate_block_area (CongEditorNode *editor_node)
 
 	return CONG_EDITOR_AREA(PRIVATE(node_comment)->area_text_comment);
 }
+#endif
 
 /* Definitions of the CongDocument event handlers: */
 #if 0
