@@ -39,6 +39,12 @@ struct CongEditorNodeElementSpanDetails
 	int dummy;
 };
 
+
+#if 1
+static void 
+create_areas (CongEditorNode *editor_node,
+	      const CongAreaCreationInfo *creation_info);
+#else
 static CongEditorArea*
 generate_block_area (CongEditorNode *editor_node);
 
@@ -46,6 +52,7 @@ static CongEditorLineFragments*
 generate_line_areas_recursive (CongEditorNode *editor_node,
 			       gint line_width,
 			       gint initial_indent);
+#endif
 
 static enum CongFlowType
 get_flow_type(CongEditorNode *editor_node);
@@ -67,8 +74,12 @@ cong_editor_node_element_span_class_init (CongEditorNodeElementSpanClass *klass)
 {
 	CongEditorNodeClass *node_klass = CONG_EDITOR_NODE_CLASS(klass);
 
+#if 1
+	node_klass->create_areas = create_areas;
+#else
 	node_klass->generate_block_area = generate_block_area;
 	node_klass->generate_line_areas_recursive = generate_line_areas_recursive;
+#endif
 	node_klass->get_flow_type = get_flow_type;
 }
 
@@ -104,6 +115,14 @@ cong_editor_node_element_span_new (CongEditorWidget3* widget,
 				  traversal_node));
 }
 
+#if 1
+static void 
+create_areas (CongEditorNode *editor_node,
+	      const CongAreaCreationInfo *creation_info)
+{
+	g_assert_not_reached (); /* FIXME */
+}
+#else
 static CongEditorArea*
 generate_block_area (CongEditorNode *editor_node)
 {
@@ -209,6 +228,7 @@ generate_line_areas_recursive (CongEditorNode *editor_node,
 	
 	return result;
 }
+#endif
 
 static enum CongFlowType
 get_flow_type(CongEditorNode *editor_node)
