@@ -38,8 +38,14 @@ struct CongEditorNodeElementStructuralDetails
 	int dummy;
 };
 
+#if 1
+static void 
+create_areas (CongEditorNode *editor_node,
+	      const CongAreaCreationInfo *creation_info);
+#else
 static CongEditorArea*
 generate_block_area (CongEditorNode *editor_node);
+#endif
 
 /* Declarations of the CongEditorArea event handlers: */
 
@@ -54,7 +60,11 @@ cong_editor_node_element_structural_class_init (CongEditorNodeElementStructuralC
 {
 	CongEditorNodeClass *node_klass = CONG_EDITOR_NODE_CLASS(klass);
 
+#if 1
+	node_klass->create_areas = create_areas;
+#else
 	node_klass->generate_block_area = generate_block_area;
+#endif
 }
 
 static void
@@ -89,6 +99,14 @@ cong_editor_node_element_structural_new (CongEditorWidget3* widget,
 				  traversal_node));
 }
 
+#if 1
+static void 
+create_areas (CongEditorNode *editor_node,
+	      const CongAreaCreationInfo *creation_info)
+{
+	g_assert_not_reached (); /* FIXME */
+}
+#else
 static CongEditorArea*
 generate_block_area (CongEditorNode *editor_node)
 {
@@ -139,5 +157,6 @@ generate_block_area (CongEditorNode *editor_node)
 
 	return inner_area;
 }
+#endif
 
 /* Definitions of the CongEditorArea event handlers: */
