@@ -37,8 +37,14 @@ struct CongEditorNodeEntityDeclDetails
 	int dummy;
 };
 
+#if 1
+static void 
+create_areas (CongEditorNode *editor_node,
+	      const CongAreaCreationInfo *creation_info);
+#else
 static CongEditorArea*
 generate_block_area (CongEditorNode *editor_node);
+#endif
 
 /* Exported function definitions: */
 GNOME_CLASS_BOILERPLATE(CongEditorNodeEntityDecl, 
@@ -52,7 +58,11 @@ cong_editor_node_entity_decl_class_init (CongEditorNodeEntityDeclClass *klass)
 
 	CongEditorNodeClass *node_klass = CONG_EDITOR_NODE_CLASS(klass);
 
+#if 1
+	node_klass->create_areas = create_areas;
+#else
 	node_klass->generate_block_area = generate_block_area;
+#endif
 }
 
 static void
@@ -85,6 +95,14 @@ cong_editor_node_entity_decl_new (CongEditorWidget3 *widget,
 				 );
 }
 
+#if 1
+static void 
+create_areas (CongEditorNode *editor_node,
+	      const CongAreaCreationInfo *creation_info)
+{
+	g_assert_not_reached (); /* FIXME */
+}
+#else
 static CongEditorArea*
 generate_block_area (CongEditorNode *editor_node)
 {
@@ -134,3 +152,4 @@ generate_block_area (CongEditorNode *editor_node)
 
 	return new_area;
 }
+#endif
