@@ -61,8 +61,14 @@ finalize (GObject *object);
 static void
 dispose (GObject *object);
 
+#if 1
+static void 
+create_areas (CongEditorNode *editor_node,
+	      const CongAreaCreationInfo *creation_info);
+#else
 static CongEditorArea*
 generate_block_area (CongEditorNode *editor_node);
+#endif
 
 static void 
 on_end_edit (CongDocument *doc,
@@ -87,7 +93,11 @@ cong_editor_node_element_listitem_class_init (CongEditorNodeElementListitemClass
 	G_OBJECT_CLASS (klass)->finalize = finalize;
 	G_OBJECT_CLASS (klass)->dispose = dispose;
 
+#if 1
+	node_klass->create_areas = create_areas;
+#else
 	node_klass->generate_block_area = generate_block_area;
+#endif
 
 	signals[LABEL_CHANGED] = g_signal_new ("label_changed",
 					       CONG_EDITOR_NODE_ELEMENT_LISTITEM_TYPE,
@@ -413,6 +423,14 @@ dispose (GObject *object)
 	GNOME_CALL_PARENT (G_OBJECT_CLASS, dispose, (object));
 }
 
+#if 1
+static void 
+create_areas (CongEditorNode *editor_node,
+	      const CongAreaCreationInfo *creation_info)
+{
+	g_assert_not_reached (); /* FIXME */
+}
+#else
 static CongEditorArea*
 generate_block_area (CongEditorNode *editor_node)
 {
@@ -435,6 +453,7 @@ generate_block_area (CongEditorNode *editor_node)
 
 	return new_area;
 }
+#endif
 
 static void 
 on_end_edit (CongDocument *doc,
